--- a/WaccaCircle.csproj
+++ b/WaccaCircle.csproj
@@ -59,6 +59,7 @@
     <Reference Include="LilyConsole">
       <HintPath>..\LilyConsole.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -66,6 +67,7 @@
     <Reference Include="vJoyInterfaceWrap">
       <HintPath>..\..\..\..\..\..\..\..\Program Files\vJoy\x64\vJoyInterfaceWrap.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
