--- a/Background/WaccaStartupBackgroundLauncher.csproj
+++ b/Background/WaccaStartupBackgroundLauncher.csproj
@@ -56,9 +56,7 @@
     <Reference Include="LilyConsole">
       <HintPath>..\..\LilyConsole.dll</HintPath>
     </Reference>
-    <Reference Include="vJoyInterfaceWrap">
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files\vJoy\x64\vJoyInterfaceWrap.dll</HintPath>
-    </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
